More PR comments